Adding tests and refactoring repo structure